--- a/README
+++ b/README
@@ -88,7 +88,6 @@ AUTHOR:
 
 ABOUT THIS FORK:
 
- Я к херам сломал протокол, извините. Так что эта версия Foolscap не совместима
+ Я к херам сломал протокол, извините, Из-за строк невозможно заставить
+ вместе работать Python 2 и Python 3, так что эта версия Foolscap не совместима
  с оригинальной.
-
- На тесты я пока забил.
